[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiset-key-dict"
version = "0.2.3"
authors = [
    { name = "Andrew Tapia", email = "andrew.tapia@uky.edu" }
]
description =  "Mapping-like objects with unordered multisets as keys."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/actapia/multiset-key-dict"
"Bug Tracker" = "https://github.com/actapia/multiset-key-dict"

[tool.setuptools.packages.find]
where = ["src"]
include = ["multiset_key_dict"]
